# psx_soundfont_generator

./: .gitignore  CMakeLists.txt  Makefile
source/: main.c  wav.h
